webapp/grammar_specs.txt
Examples:

macd(17,8) - macd_signal(17,8,9) 2 days_ago >= 1
macd(17,8) - macd_signal(17,8,9) <= 1
macd(17,8) is_crossing macd_signal(17,8,9)
macd(17,8) 1 days_ago |-| macd(17,8) > 1
macd(17,8) speed >= macd(17,8) speed 1 days_ago
macd(17,8) <= macd(17,8) 1 days_ago
full_stochastic(10,3) is_crossing 20	
rsi(14) speed >= 1
rsi(14) is_crossing 50

rsi(14) >= rsi(20)
rsi(14) speed >= rsi(20) speed
macd(17,8) - macd_signal(17,8,9) 2 days_ago >= 1
macd(17,8) is_increasing



<expression> -> <operand> <booloperator> <operand>
			 -> <operand> <booloperator>
			
<operand> -> <indicator> [<modifier>]
		  -> <indicator> [<modifier>] <arithoperator> <operand>
		  -> <unit>

<booloperator> -> >=
			   -> <=
			   -> is_crossing
			   -> is_increasing

<arithoperator> -> -
				-> |-|

<indicator> -> macd(<number>,<number>) #commentary: parameters are long-term moving average, short-term moving average
			-> macd_signal(<number>,<number>,<number>) #commentary: parameters are long-term moving average, short-term moving average, period
			-> sma(<number>)
			-> ema(<number>)
			-> stochastic(<number>)
			-> stochastic_signal(<number>, <number>) #commentary: parameters are n, smoothing
			-> full_stochastic(<number>, <number>) #commentary: parameters are n, moving average
			-> full_stochastic_signal(<number>,<number>,<number>) #commentary: parameters are n, moving average, smoothing
			-> rsi(<number>)
			-> price

		
<modifier> -> speed [<day_displacement>]
		   -> gradient [<day_displacement>]
		   -> <day_displacement>

<day_displacement> -> <number> days_ago
				   -> <number> days_later

<unit> -> <float>

<float> -> all floats

<number> -> 1,2,3,4,5...		
